# Forward-Client

./: .gitignore  .gitmodules  CMakeLists.txt  Client.pro  Msg-Client.pro  README.md
Forward/: CMakeLists.txt
Forward/Resources/conf/: theme.conf
Forward/Resources/langs/: lang_en.ts  lang_en_US.ts  lang_ua.ts  lang_uk_UA.ts
Forward/Resources/qrc/: app.qrc  forward.qrc  pages.qrc
Forward/Resources/winrc/: Forward.manifest  Forward.rc
Forward/Source/FrontLayer/: App.qml  Login.qml  Main.qml  Start.qml
Forward/Source/FrontLayer/pages/: App.qml  Conversation.qml  Login.qml  Main.qml  Start.qml
Forward/Source/LogicLayer/: main.cpp
Libs/: CMakeLists.txt
Libs/lib_client/forward/client/: Localisation.hpp  Style.cpp  Style.hpp
back/: main.cpp
cmake/: cxx-common.cmake  path.cmake  qt-common.cmake
libs/: CMakeLists.txt
src/back/: main.cpp
src/front/content/: pages.qrc
src/front/qml/: main.qml  start.qml
